<resources>
    <string name="app_name">PamLanjutan</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun, Daftar disini.</string>
    <string name="login">Login</string>
    <string name="shoppy">Shoppy</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="register_with_facebook">Register With Facebook</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun_silahkan_login">Sudah punya akun? Silahkan Login</string>
</resources>
